--- a/src/components/AuthForm.css
+++ b/src/components/AuthForm.css
@@ -16,7 +16,7 @@
 }
 
 .form-box h2 {
-    color: var(--color-primary);
+    color: var(--color-text);
     font-weight: 600;
     font-size: 1.5rem;
     text-align: left;
