--- a/src/layout/MainLayout.css
+++ b/src/layout/MainLayout.css
@@ -7,9 +7,10 @@
   }
   
   .main-content {
-    flex: 1;
-    padding: 40px;
+    height: 100vh;
     overflow-y: auto;
+    padding: 40px;
+    margin-left: 60px;
   }
   
   
