--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -102,3 +102,9 @@ input:focus {
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(120, 120, 120, 0.35);
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
