--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -78,7 +78,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 20px 12px;
+  padding: 0px 0px 8px 0px;
   gap: 20px;
 }
 
