--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -24,14 +24,14 @@
     --color-bg: #191919;         /* true grayish dark */
     --color-text: #bcbcbc;
     --color-text-hover: #818181;
-    --color-primary: #4d8ef7;
+    --color-primary: #40639a;
     --color-card: #1d1d1d;
     --color-inner-card: #212121;
     --color-muted: #303030;
     --color-shadow: rgba(0, 0, 0, 0.5);
     --color-error: #ef5350;
     --color-disabled: #3f3f3f;
-    --color-primary-hover: rgb(64, 99, 213);
+    --color-primary-hover: #2f4a77;
     --color-muted-hover: #2a2a2a;
     --color-positive-bg: #23523e;
     --color-positive-text: #75b178;
